@@ -32,7 +32,6 @@ namespace MUSIC {
     bool interpolate_;
     bool communicate_;
     void nextCommunication ();
-    void setMaxDelay (ClockState maxDelay, Clock& clock);
   public:
     void setLocalTime (Clock* lt);
     virtual void setSenderTickInterval (ClockState ti);
@@ -42,20 +41,22 @@ namespace MUSIC {
     void setAccLatency (ClockState l);
     ClockState delay () { return latency_; }
     void setInterpolate (bool flag);
-    void setMaxDelay (ClockState maxDelay);
     virtual void initialize ();
+    virtual int initialBufferedTicks () { return 0; };
     bool communicate ();
   };
 
 
   class OutputSynchronizer : virtual public Synchronizer {
   public:
+    bool sample ();
     void tick ();
   };
 
 
   class InputSynchronizer : virtual public Synchronizer {
   public:
+    virtual int initialBufferedTicks ();
     void tick ();
   };
 
